# routes/index.js
@@ -5,5 +5,6 @@ router.use('/', require('./swagger'));
 router.get('/', (req, res) => { res.send('Project2 API is running. See /api-docs for documentation.'); });
 
 router.use('/apidev', require('./apidev'));
+router.use('/developers', require('./developers'));
 
 module.exports = router;
